@@ -19,13 +19,13 @@ ol {
 
 dl {
   margin-bottom: $base-spacing / 2;
+}
 
-  dt {
-    font-weight: bold;
-    margin-top: $base-spacing / 2;
-  }
+dt {
+  font-weight: bold;
+  margin-top: $base-spacing / 2;
+}
 
-  dd {
-    margin: 0;
-  }
+dd {
+  margin: 0;
 }
