@@ -1,33 +1,24 @@
-.form {
-  &-actions {
-    margin-left: 12em;
+.form-actions {
+  @include shift(2);
+}
+
+.form-field {
+  @include clearfix;
+  @include fill-parent;
+  align-items: baseline;
+  width: 100%;
+
+  label {
+    @include data-label;
+    @include span-columns(2 of 12);
+    text-align: right;
   }
 
-  &-heading {
-    font-size: 1.75em;
-    margin: 0;
-    padding-bottom: 0.5em;
-  }
-
-  &-field {
-    align-items: baseline;
-    display: flex;
-    justify-content: flex-start;
-    margin: 1.2em 0;
-    width: 100%;
-
-    label {
-      margin-right: 2em;
-      text-align: right;
-      width: 10em;
-    }
-
-    input,
-    select,
-    .selectize-control {
-      background-color: $form-field-background-color;
-      max-width: 30em;
-      width: 30em;
-    }
+  input,
+  select,
+  .selectize-control {
+    @include span-columns(4 of 12);
+    background-color: $form-field-background-color;
+    margin-bottom: $base-spacing;
   }
 }
