@@ -2,7 +2,7 @@
   align-items: flex-end;
   display: flex;
   justify-content: space-between;
-  margin-bottom: $base-spacing;
+  margin-bottom: $base-spacing * 2;
 
   &-heading {
     margin-top: 0;
